Fix nav bar click on mobile

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,6 +4,7 @@
   right: 50px;
   display: flex;
   justify-content: flex-end;
+  z-index: 5;
 }
 
 .nav-item {
